--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 button {
     width: 100%;
     margin-bottom: 5px;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
 }
 
 button:hover {
